# rust-extensions

.github/workflows/: ci-windows.yml
crates/shim/: Cargo.toml
crates/shim-protos/: Cargo.toml
crates/shim/src/: error.rs  lib.rs  logger.rs  mount.rs  util.rs
crates/shim/src/asynchronous/: mod.rs
crates/shim/src/synchronous/: console.rs  mod.rs  publisher.rs  util.rs
crates/shim/src/sys/windows/: named_pipe_logger.rs
