[package]
name = "containerd-shim"
version = "0.3.0"
authors = ["Maksym Pavlenko <pavlenko.maksym@gmail.com>", "The containerd Authors"]
keywords = ["containerd", "shim", "containers"]
description = "containerd shim extension"

edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
async = ["tokio", "containerd-shim-protos/async", "async-trait", "futures", "signal-hook-tokio"]

[[example]]
name = "skeleton_async"
required-features = ["async"]

[dependencies]
go-flag = "0.1.0"
thiserror = "1.0"
log = { version = "0.4", features = ["std"] }
libc = "0.2.95"
nix = "0.26"
lazy_static = "1.4.0"
time = { version = "0.3.7", features = ["serde", "std"] }
serde_json = "1.0.78"
serde_derive = "1.0.136"
serde = "1.0.136"
uuid = { version = "1.0.0", features = ["v4"] }
signal-hook = "0.3.13"
oci-spec = "0.5.8"
prctl = "1.0.0"
page_size = "0.5.0"
regex = "1"

containerd-shim-protos = { path = "../shim-protos", version = "0.2.0" }

async-trait = { version = "0.1.51", optional = true }
tokio = { version = "1.17.0", features = ["full"], optional = true }
futures = {version = "0.3.21", optional = true}
signal-hook-tokio = {version = "0.3.1", optional = true, features = ["futures-v0_3"]}

[target.'cfg(target_os = "linux")'.dependencies]
cgroups-rs = "0.2.9"
command-fds = "0.2.1"

[target.'cfg(windows)'.dependencies.windows-sys] 
version = "0.48"
features = [
  "Win32_Foundation",                 # Basic types eg HANDLE
  "Win32_Networking_WinSock",         # winsock2 types/functions
  "Win32_Storage_FileSystem",         # Enables NtCreateFile
  "Win32_System_IO",                  # IO types like OVERLAPPED etc
  "Win32_System_WindowsProgramming",  # General future used for various types/funcs
  "Win32_System_Pipes",               # Named pipe types/functions
  "Win32_Security",                  # Security types/functions
  "Win32_System_Console",
  "Win32_System_Threading",
]

[dev-dependencies]
tempfile = "3.0"
